testsuite/tests/rename/should_fail/T23740e.hs
{-# LANGUAGE RequiredTypeArguments #-}

module T23740e where

data T (a :: id) = MkT