testsuite/tests/rename/should_fail/T23740e.stderr

T23740e.hs:5:14: error: [GHC-45510]
    • Term variable ‘id’ cannot be used here
        (term variables cannot be promoted)
    • In the kind ‘id’
      In the data type declaration for ‘T’
